--- a/style.css
+++ b/style.css
@@ -38,3 +38,15 @@ input[name='version'] {
 }
 
 
+#progress-bar {
+    width: 0;
+    height: 20px;
+    background-color: green;
+}
+
+
+#progress-container {
+    width: 100%;
+    border: 1px solid #ccc;
+    height: 20px;
+}
