--- a/style.css
+++ b/style.css
@@ -50,3 +50,15 @@ input[name='version'] {
     border: 1px solid #ccc;
     height: 20px;
 }
+
+
+.badges {
+    position: fixed;
+    bottom: 1%;
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+	justify-content: center; 
+    margin: 10px; 
+	gap: 10px;
+}
